# mcp_documents_reader

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  README.zh-CN.md  RELEASE.md  TEST_REPORT.md  mcp_documents_reader.py  pyproject.toml  run_tests.py  server.json
.github/workflows/: ci.yml  release.yml  security.yml
docs/en/: API.md  CHANGELOG.md  CONTRIBUTING.md  USER_GUIDE.md
docs/zh/: API.md  CHANGELOG.md  CONTRIBUTING.md  USER_GUIDE.md
scripts/: README.md  run_tests.py
tests/: __init__.py  conftest.py  create_fixtures.py  test_factory.py  test_lifespan.py  test_readers.py  test_tools.py
tests/fixtures/: __init__.py  binary.txt  corrupted.docx  corrupted.xlsx  empty.docx  empty.xlsx  sample.docx  sample.txt  sample.xlsx  sample_gbk.txt
