[project]
name = "mcp_documents_reader"
version = "1.0.0"
description = "An MCP enabled multi-format document reader supporting DOCX, PDF, TXT, and Excel files"
authors = [
  { name = "xt765", email = "xt765@foxmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "mcp>=0.1.0",
  "python-docx>=0.8.11",
  "PyPDF2>=3.0.1",
  "openpyxl>=3.0.10"
]

[project.scripts]
mcp_documents_reader = "mcp_documents_reader:main"

[build-system]
requires = ["hatchling>=1.14.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_documents_reader.py"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py38"]